--- a/src/app/template/dinamicos/dinamicos.component.html
+++ b/src/app/template/dinamicos/dinamicos.component.html
@@ -1,1 +1,82 @@
-<p>dinamicos works!</p>
+ <h2>Template</h2><small>Dinámicos</small>
+
+ <form  (ngSubmit)="guardar"
+        autocomplete="off" 
+        #miFormulario="ngForm">
+
+    <div class="mb-3 row ">
+         <label class="col-sm-3 col-form-label">
+             Nombre
+            </label>
+         <div class="col-sm-9">
+             <input type="text"
+                    name="nombre"
+                    [ngModel]="persona.nombre"
+                    class="form-control"
+                    placeholder="Nombre de la persona"
+                    required>
+                    <span   *ngIf="miFormulario.controls.nombre?.errors
+                            && miFormulario.controls.nombre?.touched"
+                            class="form-text text-danger">
+                        Este campo es obligatorio
+                    </span>
+         </div>
+    </div>
+    <!--Agregar favorito-->
+    <div class="mb-3 row ">
+        <label class="col-sm-3 col-form-label">
+            Agregar
+           </label>
+        <div class="col-sm-9">
+            <div class="input-group">
+                <input  class="form-control"
+                        placeholder="Agregar Juego favorito"
+                        [(ngModel)]="nuevoJuego"
+                        (keyup.enter)="agregarJuego()"
+                        name="nuevoJuego">
+                <button class="btn btn-outline-primary"
+                        type="button"
+                        (click)="agregarJuego()">
+                    Agregar
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <!--Lista de juego favoritos favorito-->
+    <div class="mb-3 row ">
+    <label class="col-sm-3 col-form-label">
+        Favoritos
+       </label>
+    <div class="col-sm-9">
+
+        <div    class="input-group mb-1"
+                *ngFor="let juego of persona.favoritos; let i = index">
+            <input  class="form-control"
+                    [(ngModel)]="juego.nombre"
+                    name="favorito_{{i}}"
+                    required>
+            <button class="btn btn-outline-danger"
+                    type="button"
+                    (click)="eliminar(i)">
+                Eliminar
+            </button>
+        </div>
+
+    </div>
+</div>
+
+    <div class="row">
+        <div class="col-sm-12">
+            <button type="submit"
+                    (click)="guardar()"
+                    [disabled]="!miFormulario.valid"
+                    class="btn btn-primary float-end">
+                Guardar
+            </button>
+        </div>
+    </div>
+ </form>
+
+ <span>Persona</span>
+ <pre>{{persona | json}}</pre>
