--- a/src/app/template/switches/switches.component.html
+++ b/src/app/template/switches/switches.component.html
@@ -1,1 +1,104 @@
-<p>switches works!</p>
+<h2>Template: Switches</h2>
+
+<form #miFormulario="ngForm">
+
+    <!--radio-->
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">
+            Género
+        </label>
+        <div class="col-sm-9">
+            <div class="form-check">
+                <input  class="form-check-input" 
+                        type="radio"
+                        value="M"
+                        [(ngModel)]="persona.genero"
+                        name="radioGenero" 
+                        id="radioMasculino"
+                        required>
+                <label  class="form-check-label" 
+                        for="radioMasculino">
+                    Masculino
+                </label>
+              </div>
+              <div class="form-check">
+                <input  class="form-check-input" 
+                        type="radio" 
+                        value="F"
+                        [(ngModel)]="persona.genero"
+                        name="radioGenero" 
+                        id="radioFemenino"
+                        required>
+                <label  class="form-check-label" 
+                        for="radioFemenino">
+                    Femenino
+                </label>
+              </div>
+        </div>
+    </div>
+<!--Switches-->
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">
+            Notificaciones
+        </label>
+        <div class="col-sm-9">
+            <div class="form-check form-switch mt-2">
+                <input  class="form-check-input" 
+                        type="checkbox"
+                        name="condiciones"
+                        [(ngModel)]="persona.notificaciones"
+                        role="switch" 
+                        id="flexSwitchCheckChecked">
+                <label  class="form-check-label" 
+                        for="flexSwitchCheckChecked">
+                    Quiero recibir notificaciones
+                </label>
+            </div>
+        </div>
+    </div>
+
+    <!--checkbox-->
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">
+        </label>
+        <div class="col-sm-9">
+            <div class="form-check">
+                <input  class="form-check-input" 
+                        type="checkbox"
+                        id="defaultCheck1"
+                        name="terminos"
+                        [(ngModel)]="terminosYCondiciones"
+                        required>
+                <label  class="form-check-label" 
+                        for="defaultCheck1">
+                    Terminos y condiciones
+                </label>
+              </div>
+        </div>
+    </div>
+
+    <!--boton submit-->
+
+    <div class="row">
+        <div class="col">
+            <button type="submit"
+                    class="btn btn-primary float-end"
+                    [disabled]="!miFormulario.valid">
+                    Guardar
+            </button>
+        </div>
+    </div>
+</form>
+
+<h5>Valor del formulario</h5>
+<pre>{{miFormulario.value | json}}</pre>
+<br>
+<h5>Persona</h5>
+<pre>{{persona | json}}</pre>
+<br>
+<h5>Valid</h5>
+<pre>{{miFormulario.valid}}</pre>
+<br>
+<h5>Terminos</h5>
+<pre>{{miFormulario.controls?.terminos?.errors | json}}</pre>
+<h5>Condiciones</h5>
