--- a/src/app/reactive/dinamicos/dinamicos.component.html
+++ b/src/app/reactive/dinamicos/dinamicos.component.html
@@ -1,1 +1,79 @@
-<p>dinamicos works!</p>
+<h2>Template</h2><small>Dinámicos</small>
+
+<form  (ngSubmit)="guardar()"
+       autocomplete="off" 
+       [formGroup]="miFormulario">
+
+   <div class="mb-3 row ">
+        <label class="col-sm-3 col-form-label">
+            Nombre
+           </label>
+        <div class="col-sm-9">
+            <input type="text"
+                   name="nombre"
+                   formControlName="nombre"
+                   class="form-control"
+                   placeholder="Nombre de la persona">
+                   <span   *ngIf="campoEsValido('nombre')"
+                           class="form-text text-danger">
+                           Debe de ser de 3 letras mínimo
+                   </span>
+        </div>
+   </div>
+   <!--Agregar favorito-->
+   <div class="mb-3 row ">
+       <label class="col-sm-3 col-form-label">
+           Agregar
+          </label>
+       <div class="col-sm-9">
+           <div class="input-group">
+               <input  class="form-control"
+                       placeholder="Agregar Juego favorito" 
+                       (keyup.enter)="agregarJuego()"
+                       name="nuevoJuego">
+               <button class="btn btn-outline-primary"
+                       type="button"
+                       (click)="agregarJuego()">
+                   Agregar
+               </button>
+           </div>
+       </div>
+   </div>
+
+   <!--Lista de juego favoritos favorito-->
+   <div class="mb-3 row ">
+   <label class="col-sm-3 col-form-label">
+       Favoritos
+      </label>
+   <div class="col-sm-9"
+        formArrayName="favoritos">
+       <div class="input-group mb-1"
+            *ngFor="let favorito of favoritosArr.controls; let i = index">
+           <input  class="form-control"
+                    [formControlName]="i">
+           <button class="btn btn-outline-danger"
+                   type="button">
+               Eliminar
+           </button>
+       </div>
+
+   </div>
+</div>
+
+   <div class="row">
+       <div class="col-sm-12">
+           <button type="button"
+                   (click)="guardar()"
+                   class="btn btn-primary float-end">
+               Guardar
+           </button>
+       </div>
+   </div>
+</form>
+
+
+<span>Valid</span>
+<pre>{{miFormulario.valid}}</pre>
+<br>
+<span>Valid</span>
+<pre>{{miFormulario.value | json}}</pre>
