--- a/src/app/reactive/basicos/basicos.component.html
+++ b/src/app/reactive/basicos/basicos.component.html
@@ -1,1 +1,84 @@
-<p>basicos works!</p>
+<h2>Template: Basicos</h2>
+<hr>
+
+<div class="row">
+    <div class="col">
+
+        <form (ngSubmit)="guardar()" autocomplete="off" [formGroup]="miFormulario">
+            <!--producto-->
+            <div class="mb-3 row">
+                <label class="col-sm-3 col-form-label">
+                    Producto
+                </label>
+                <div class="col-sm-9">
+                    <input  type="text"
+                            class="form-control"
+                            formControlName="nombre"
+                            placeholder="Nombre del producto">
+                            <span  *ngIf="campoEsValido('nombre')"
+                                    class="form-text text-danger">
+                                Debe de ser de 3 letras
+                            </span>
+                </div>
+            </div>
+            <!--precio-->
+            <div class="mb-3 row">
+                <label class="col-sm-3 col-form-label">
+                    Precio
+                </label>
+                <div class="col-sm-9">
+                    <input  type="number"
+                            class="form-control"
+                            formControlName="precio"
+                            placeholder="Precio del producto">
+                            <span  *ngIf="campoEsValido('precio')" 
+                                    class="form-text text-danger">
+                                El precio debe ser mayor o igual a 0
+                            </span>
+                </div>
+            </div>
+            <!--Existencias-->
+            <div class="mb-3 row">
+                <label class="col-sm-3 col-form-label">
+                    Existencias
+                </label>
+                <div class="col-sm-9">
+                    <input  type="number"
+                            formControlName="existencias"
+                            class="form-control"
+                            placeholder="Existencias del producto">
+                            <span  *ngIf="campoEsValido('existencias')" 
+                                    class="form-text text-danger">
+                                Las existencias deben ser mayor o igual a 0
+                            </span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <button type="submit"
+                            class="btn btn-primary float-end">
+                        Guardar
+                    </button>
+                </div>
+            </div>
+        </form>
+
+    </div>
+</div>
+
+<div class="col">
+    <span>Valid</span>
+    <pre>{{miFormulario.valid}}</pre>
+
+    <span>pristine</span>
+    <pre>{{miFormulario.pristine}}</pre>
+
+    <span>touched</span>
+    <pre>{{miFormulario.touched}}</pre>
+
+    <span>value</span>
+    <pre>{{miFormulario.value | json}}</pre>
+
+    <span>value</span>
+    <pre>{{miFormulario.controls.precio.errors | json}}</pre>
+</div>
