--- a/src/app/shared/sidemenu/sidemenu.component.html
+++ b/src/app/shared/sidemenu/sidemenu.component.html
@@ -19,3 +19,14 @@
         {{item.texto}}
     </li>
 </ul>
+
+<h2 class="mt-3">Validaciones</h2>
+<hr>
+<ul class="list-group">
+    <li class="list-group-item"
+    *ngFor="let item of AuthMenu"
+        [routerLink]="[item.ruta]"
+        routerLinkActive="active">
+        {{item.texto}}
+    </li>
+</ul>
