--- a/src/app/auth/pages/registro/registro.component.html
+++ b/src/app/auth/pages/registro/registro.component.html
@@ -14,12 +14,13 @@
                     <input  type="text"
                             class="form-control"
                             formControlName="nombre"
-                            placeholder="Nombre de usuario">
+                            placeholder="Nombre Apellido">
+                
+                    <span   class="form-text text-danger"
+                            *ngIf="campoNoValido('nombre')">
+                        Debe de ser en formato de nombre y apellido
+                    </span>
                 </div>
-                <span   class="form-text text-danger"
-                        *ngIf="campoNoValido('nombre')">
-                    Debe de ser en formato de nombre y apellido
-                </span>
             </div>
 
             <!--email-->
@@ -29,8 +30,13 @@
                 </label>
                 <div class="col-sm-9">
                     <input  type="email"
+                            formControlName="email"
                             class="form-control"
                             placeholder="Email del usuario">
+                    <span   class="form-text text-danger"
+                            *ngIf="campoNoValido('email')">
+                        {{emailErrorMsg}}
+                    </span>
                 </div>
             </div>
 
@@ -41,8 +47,13 @@
                 </label>
                 <div class="col-sm-9">
                     <input  type="text"
+                    formControlName="username"
                             class="form-control"
                             placeholder="username del usuario">
+                    <span   class="form-text text-danger"
+                            *ngIf="campoNoValido('username')">
+                        El username no puede ser strider
+                    </span>
                 </div>
             </div>
 
@@ -53,8 +64,13 @@
                 </label>
                 <div class="col-sm-9">
                     <input  type="password"
+                            formControlName="password"
                             class="form-control"
                             placeholder="password del usuario">
+                    <span   class="form-text text-danger"
+                            *ngIf="campoNoValido('password')">
+                        La contraseña debe de ser mayor de 6 caracteres
+                    </span>
                 </div>
             </div>
 
@@ -65,8 +81,13 @@
                 </label>
                 <div class="col-sm-9">
                     <input  type="password"
+                            formControlName="password2"
                             class="form-control"
                             placeholder="Confirmar la contraseña">
+                    <span   class="form-text text-danger"
+                            *ngIf="campoNoValido('password2')">
+                        Las contraseñas deben de ser iguales
+                    </span>
                 </div>
             </div>
 
@@ -74,6 +95,7 @@
             <div class="row">
                 <div class="col">
                     <button class="btn btn-primary float-end"
+                            [disabled]="miFormulario.pending"
                             type="submit">
                         Guardar
                     </button>
@@ -85,7 +107,24 @@
     </div>
 </div>
 
-<h2>Form valid: {{miFormulario.valid}}</h2>
+<h2>Form valid, Es valido?: {{miFormulario.valid}}</h2>
+<h2>Form status, Esta OK?: {{miFormulario.status}}</h2>
+<h2>Form pending, Esta pendiente?: {{miFormulario.pending}}</h2>
 
-<h2>Nombre</h2>
+<h2>Form errors</h2>
+<pre>{{miFormulario.errors | json}}</pre>
+
+<h4>Nombre</h4>
 <pre>{{miFormulario.controls.nombre.errors | json}}</pre>
+
+<h4>Email</h4>
+<pre>{{miFormulario.controls.email.errors | json}}</pre>
+
+<h4>Username</h4>
+<pre>{{miFormulario.controls.username.errors | json}}</pre>
+
+<h4>Password</h4>
+<pre>{{miFormulario.controls.password.errors | json}}</pre>
+
+<h4>Confirmar Password</h4>
+<pre>{{miFormulario.controls.password2.errors | json}}</pre>
